--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,11 @@ transform: scale(1.03);
   .hebergements{
     margin-top: 1.875em;
   }
+
+  .cards-wrapper{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
   .text-recherche{
     display: none;
   }
@@ -592,7 +597,8 @@ transform: scale(1.03);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      border: 2px solid black;
+      max-width: 100%;
+      flex-basis: 100%;
     }
 
    
