--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,17 @@ transform: scale(1.03);
   display: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 /* Titre principale*/
 .section-title, .titre-principal {
   font-size: 1.375em;
