--- a/css/style.css
+++ b/css/style.css
@@ -233,32 +233,24 @@ transform: scale(1.03);
   margin-bottom: 1em;
 }
 
-.hebergement-cards .cards-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+ .cards-wrapper {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr 1fr;
   cursor: pointer;
+  max-width: 100%;
 }
 
-.cards-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1em;
-  width: 100%;
-}
 
 .card-hebe {
   flex: 1;
-  max-width: calc(33.33% - 1em);
-  border-radius: 1.875em;
-  overflow: hidden;
-  box-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s;
-  flex: 0 0 calc(33.3333% - 1.25em);
-  border-left: 0.313em solid white;
-  border-right: 0.313em solid white;
-  border-top: 0.313em solid white;
-  box-sizing: border-box;
+    border-radius: 1.875em;
+    overflow: hidden;
+    box-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    margin: 0 0.625em;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
 .card-hebe .card-content {
