--- a/css/style.css
+++ b/css/style.css
@@ -293,10 +293,11 @@ transform: scale(1.03);
 
 /****** Populaires ***********/
 .populaires {
-    width: 32%;
+    width: 33%;
     background-color: var(--main-bg-color);
-      border-radius: 1.25em;
-      padding: 1.875em;
+    border-radius: 1.25em;
+    padding: 1.875em;
+    
 }
 
 .populaires-title {
@@ -509,6 +510,18 @@ transform: scale(1.03);
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 770px) {
+.main-container{
+padding: 0;
+}
+
+.haut{
+  padding: 0 2em;
+}
+
+.informations{
+  margin-left: 2em;
+}
+
 .hebergements .card {
     flex: 1 1 auto;
     max-width: 100%;
@@ -551,12 +564,6 @@ transform: scale(1.03);
     text-align: center;
   }
 
-
-  .main-container .populaire {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-
   .informations{
     margin-bottom: -3em;
   }
@@ -570,8 +577,6 @@ transform: scale(1.03);
     margin-top: 1.875em;
     background-color: white;
     width: 100%;
-    margin-left: -1em;
-    padding-right: 4.5em;
   }
 
   
@@ -617,7 +622,6 @@ transform: scale(1.03);
 
     .populaires{
       width: 100%;
-      margin-left: -3em;
       padding: 3em;
     }
 
@@ -646,8 +650,6 @@ transform: scale(1.03);
       flex-direction: column;
       gap: 1.5em;
       width: 100%;
-      margin-left: -3em;
-      padding-left: 3em;
     }
 
     .filtre-titre {
