--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ transform: scale(1.03);
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
+  clip-path: inset(100%);
   border: 0;
 }
 
