--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ transform: scale(1.03);
       max-width: 24%;
       margin-right: 1.75em;
       padding: 0.7em;
-      border: 0.063 solid #D9D9D9;
+      border: 0.063em solid #D9D9D9;
       font-size: 0.9em;
       border-radius: 1.563em;
       font-weight: bold;
